# DS-STAR

./: .gitignore  README.md  ds-star.code-workspace  pyproject.toml
config/: __init__.py  config.py
ds_star/: agent.py
ds_star/sub_agent/analyzer_agent/: __init__.py  agent.py  callback.py
ds_star/sub_agent/coder_agent/: __init__.py  agent.py  callbacks.py  models.py
ds_star/sub_agent/finalyzer_agent/: __init__.py  agent.py  callbacks.py
ds_star/sub_agent/planner_agent/: __init__.py  agent.py  callbacks.py
ds_star/sub_agent/router_agent/: __init__.py  agent.py  callbacks.py  models.py
ds_star/sub_agent/verifier_agent/: __init__.py  agent.py  callbacks.py  models.py
